# OS_labs

./: README.md
Colloquium/: CMakeLists.txt  Header_functions.h  Teor.txt  functions.cpp  task.cpp
Colloquium/Colloq_OS/: CMakeLists.txt  Header_functions.h  task.cpp
Colloquium/tests/: CMakeLists.txt  functions.cpp  test.cpp
Colloquium_2/: README.md  To_do_list.cpp  database.cpp  database.h  task.h  test.cpp
Colloquium_2/tests_mock/: CMakeLists.txt  gateway.cpp  gateway.h  test_gateway.cpp
Colloquium_2/to_do_API_multithreaded/: CMakeLists.txt  To_do_list.cpp  database.cpp  database.h  deploy.bat  deploy.sh
Colloquium_2/to_do_client/: CMakeLists.txt  apiclient.cpp  apiclient.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab_3/: CMakeLists.txt
Lab_3/main/: CMakeLists.txt  main.cpp
Lab_3/main_2/: CMakeLists.txt  main_standard.cpp
Lab_3/tests/: CMakeLists.txt  Header.h  catch_test.cpp  tread.cpp
Lab_4/: CMakeLists.txt
Lab_4/Receiver/: CMakeLists.txt  Receiver.cpp
Lab_4/Sender/: CMakeLists.txt  Sender.cpp
Lab_4/tests/: CMakeLists.txt  Functions.cpp  Header.h  Tests.cpp
Lab_5/: CMakeLists.txt
Lab_5/Client/: CMakeLists.txt
Lab_5/Client_98/: Client_98.cpp
Lab_5/Client_thread/: CMakeLists.txt  Client_th.cpp
Lab_5/Server/: CMakeLists.txt  Server.cpp
Lab_5/Server_98/: Server_98.cpp
Lab_5/Server_thread/: CMakeLists.txt  Server_th.cpp
Lab_5/tests/: tests.vcxproj  tests.vcxproj.filters
Lab_5/tests/x64/Debug/: tests.exe.recipe  vc143.idb
Lab_5/tests/x64/Debug/tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  tests.lastbuildstate
